migrate to java 17,jpa repo impl,tests impl